# CS263-CNN-Python-CPP-Comparison

./: .gitignore  CPP - Python Runtime and Profile.ipynb  Neural_Network_from_scratch_python.ipynb  README.md
CPP/: CMakeLists.txt
Python/: CNN.py  main.py  runtime_experiment.py
Python/CNN/: CNN.py  FC.py  Filters.py
Python/utils/: activations.py  utils.py
src/: a.out  main.cpp
src/Python/: main.py
src/Python/CNN/: CNN.py  Filters.py
src/Python/utils/: utils.py
src/cpp/CNN/: CNN.cpp  CNN.hpp
